--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "mongoose": "^5.4.14",
     "morgan": "~1.9.0",
     "vue": "^2.5.2",
     "vue-lazyload": "^1.2.6",
